--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
 							END AS gender
 							,EMAIL, FATHER_NAME,MOTHER_NAME, DOB,CAST(age AS INT) as age, 
 							coalesce(weight, 0) as weight,
-							HIRE_DATE, AGE_IN_COMPANY, SALARY,SSN, PHONE_NUMBER, COUNTRY, CITY, STATE,REGION, ZIP_CODE,USERNAME, PASSCODE, JOB_ID,MANAGER_ID, DEPARTMENT_ID, 
+							HIRE_DATE, AGE_IN_COMPANY, SALARY,SSN, PHONE_NUMBER, COUNTRY, CITY, STATE,REGION, ZIP_CODE,USERNAME, PASSCODE, JOB_ID,MANAGER_ID, DEPARTMENT_ID, DateAdded, 
 							CASE  
 								WHEN EXTRACT(MONTH FROM hire_date)<4 THEN 'Q1'
 								WHEN EXTRACT (MONTH FROM hire_date)>3 and EXTRACT (MONTH FROM hire_date)<7 THEN 'Q2'
