--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,9 +22,9 @@ pipeline {
 								WHEN GENDER='FEMALE' THEN 'F'
 								WHEN GENDER='MALE' THEN 'M'
 							END AS gender
-							,EMAIL, FATHER_NAME,MOTHER_NAME, DOB,CAST(age AS INT) as age, 
-							coalesce(weight, 0) as weight,
-							HIRE_DATE, AGE_IN_COMPANY, SALARY,SSN, PHONE_NUMBER, COUNTRY, CITY, STATE,REGION, ZIP_CODE,USERNAME, PASSCODE, JOB_ID,MANAGER_ID, DEPARTMENT_ID, DateAdded, 
+							,EMAIL, FATHER_NAME,MOTHER_NAME, CAST(age AS INT) as age, 
+							coalesce(weight, 0) as weight
+							,AGE_IN_COMPANY, SALARY,SSN, PHONE_NUMBER, COUNTRY, CITY, STATE,REGION, ZIP_CODE,USERNAME, PASSCODE, JOB_ID,MANAGER_ID, DEPARTMENT_ID, DateAdded, 
 							CASE  
 								WHEN EXTRACT(MONTH FROM hire_date)<4 THEN 'Q1'
 								WHEN EXTRACT (MONTH FROM hire_date)>3 and EXTRACT (MONTH FROM hire_date)<7 THEN 'Q2'
